--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/iistl.jpg" alt="" /></a>
+									<a href="http://iistl.org/" class="image"><img src="images/iistl.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">International Institute of Saint Louis <br /> (August 2014-May 2015)</h2>
 										<p> I worked at Missouri's refugee resettlement organization assisting refugee clients from The Democratic Republic of the Congo, Myanmar, Somalia, Afghanistan, Iraq, and Bhutan with health insurance and establishing primary care providers.  I also coordinated with multiple non-profits to provide immunizations for refugee adults and children, and created health literacy materials for public distribution throughout the state of Missouri. 
@@ -64,7 +64,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/gwb.png" alt="" /></a>
+									<a href="http://brownschool.wustl.edu/Pages/Home.aspx" class="image"><img src="images/gwb.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">George Warren Brown School of Social Work <br />(October 2013-August 2014)</h2>
 										<p>I worked with <a href="http://brownschool.wustl.edu/Faculty/FullTime/Pages/GautamNYadama.aspx">Professor Gautam N. Yadama</a> on a randomized control trial of sustainable improved cookstoves in rural India, and the consequent health effects on women and children. I also helped design causal loop diagrams to understand how gender, health, income, education, biodiversity, agricultural practices, and energy sources affect the adoption of safe-burning cookstove technology.
@@ -77,7 +77,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/wustlmed.gif" alt="" /></a>
+									<a href="https://medicine.wustl.edu/" class="image"><img src="images/wustlmed.gif" alt="" /></a>
 									<div class="content">
 									<h2 class="major">Washington University School of Medicine: Division of Public Health Sciences <br /> (May 2013-October 2013)</h2>
 									<p> Assisted <a href="http://www.publichealthsciences.wustl.edu/Faculty/GoodmanMelody">Professor Melody S. Goodman</a> in a longitudinal public health research course for community members to develop community based participatory research skills. The project also involved surveying individuals at an outpatient health clinic and administering health literacy assessments, as part of a larger project examining racial health disparities in the city of St. Louis.
@@ -88,7 +88,7 @@
 						<!-- Five -->
 							<section id="five" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/gwb.png" alt="" /></a>
+									<a href="http://brownschool.wustl.edu/Pages/Home.aspx" class="image"><img src="images/gwb.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">George Warren Brown School of Social Work <br /> (October 2012-May 2013)</h2>
 										<p> Researched exposure assessment implications, and negative birth outcomes in correlation to water contaminants with <a href="http://brownschool.wustl.edu/Faculty/FullTime/Pages/Zorimar-Rivera-Nunez.aspx">Professor Zorimar Rivera-N&uacute;&ntilde;ez</a>.   
@@ -99,7 +99,7 @@
 						<!-- Six -->
 							<section id="six" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/peacecorps.png" alt="" /></a>
+									<a href="http://www.peacecorps.gov/" class="image"><img src="images/peacecorps.png" alt="" /></a>
 									<div class="content">
 									<h2 class="major">United States Peace Corps, Abai, Kazakhstan <br /> (August 2010-November 2011)</h2>
 									<p> Planned and team-taught English classes with local counterpart for grades 5-11, and a weekly English course for adults, in a community of 700 people. I also independently organized a Women's Leadership Camp, completed cross-cultural competency training, and project design training. 
