--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 									<a href="#" class="image"><img src="images/biopic.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Other Things <br /> </h2>
-										<p> I speak Kazakh (advanced), French (intermediate), Russian (beginner), and Spanish (beginner). <br/> <br/> I have been a long-term volunteer at an <a href="http://www.earthdancefarms.org/">urban farm in St. Louis</a></a> , and I always have a garden no matter where I live. <br/> <br/> I am a scuba diver, a sometimes-runner, a terrible and enthusiastic dancer, an <a href="https://www.rover.com/members/sonia-r-enthusiastic-dog-person/">awesome dog sitter</a></a>, a pretty good cook, and I'm married to the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a></a>.   
+										<p> I speak Kazakh (advanced), French (intermediate), Russian (beginner), and Spanish (beginner). <br/> <br/> I have been a long-term volunteer at an <a href="http://www.earthdancefarms.org/">urban farm in St. Louis</a></a> , and I always have a garden no matter where I live. <br/> <br/> I am a scuba diver, a sometimes-runner, a terrible and enthusiastic dancer, an <a href="https://www.rover.com/members/sonia-r-enthusiastic-dog-person/">awesome dog sitter</a></a>, a pretty good cook, and I'm married to the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a></a>. <br/> <br/>
+										Feel free to email me at: sonia1rego at yahoo dot com  
 </p>
 							</div>
 								</div> 
