--- a/index.html
+++ b/index.html
@@ -46,7 +46,17 @@
 					<section id="wrapper">
 
 						<!-- One -->
-							
+							<section id="one" class="wrapper spotlight style3">
+								<div class="inner">
+									<a href="http://ghei.org/" class="image"><img src="images/GHEIlogosquare.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Ghana Health and Education Initiative <br /> (March 2016-Present)</h2>
+										<p>I currently serve as the Health Program Coordinator for a community based organization in Humjibre, Ghana. I am currently working on the scale-back of the Malaria Prevention, and Handwashing with Soap Programs. I also work on program development for GHEI's maternal health program, as well as program monitoring and evaluation of the Sexual and Reproductive Health program, and the Safe Delivery program. I also plan and facilitate health evaluation and outreach projects carried out by short-term volunteer groups.
+</p>
+										
+									</div>
+								</div>
+							</section>
 
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
@@ -113,7 +123,7 @@
 									<a href="#" class="image"><img src="images/biopic.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Other Things <br /> </h2>
-										<p> I speak Kazakh (advanced), French (intermediate), Russian (beginner), and Spanish (beginner). <br/> <br/> I have been a long-term volunteer at an <a href="http://www.earthdancefarms.org/">urban farm in St. Louis</a></a> , and I always have a garden no matter where I live. <br/> <br/> I am a scuba diver, a sometimes-runner, a terrible and enthusiastic dancer, an <a href="https://www.rover.com/members/sonia-r-enthusiastic-dog-person/">awesome dog sitter</a></a>, a pretty good cook, and I'm married to the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a></a>. <br/> <br/>
+										<p> I speak Kazakh (advanced), French (intermediate), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a sometimes-runner, a terrible and enthusiastic dancer, a joyful gardener, and I'm married to the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a></a>. <br/> <br/>
 										Feel free to email me at: sonia1rego at yahoo dot com  
 </p>
 							</div>
