--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
 							<!--<div class="logo"><a href="#" class="image"><img src="images/biopic.jpg" alt="" width="30%" height="30%"/></a></div>-->
 							<div class="inner">
 								<div class="content">
-										<h2 class="major">Sonia Rego</h2><p>Hi. I'm sonia. I am a public health professional with an interest in the built environment, community health, and local food systems. I have a strong background in global health. I've served with the peace corps in kazakhstan, worked with a community-based health organization in Ghana, served refugees in the united states, and have worked in public health research. I have a ba from the <a href="http://www.utdallas.edu/">university of texas at dallas</a>, and a master of public health degree from <a href="http://brownschool.wustl.edu/Pages/Home.aspx">washington university in st. Louis</a>. I believe that the world can be better, and that we can make it better. You will find a breakdown of my experiences below.</p>
+										<h2 class="major">Sonia Rego</h2><p>Hi. I'm Sonia. My interests are in the built environment, community health, and local food systems. I have a strong background in global health. I've served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and have worked in public health research. 
+										<!--I have a ba from the <a href="http://www.utdallas.edu/">university of texas at dallas</a>, and a master of public health degree from <a href="http://brownschool.wustl.edu/Pages/Home.aspx">washington university in st. Louis</a>.--> 
+										<!--I believe that the world can be better, and that we can make it better. You will find a breakdown of my experiences below.-->
+										</p>
 										<p><!--<br /><br />-->
 										I'm searching for positions in London!<br />
-										<a href="Sonia_Rego_Resume_2016.pdf">Resume</a>, <a href="mailto:sonia1rego@yahoo.com" target="_top">Contact</a>
+										<a href="resume.pdf">Resume</a>, <a href="mailto:sonia1rego@yahoo.com" target="_top">Contact</a>
 										</p> 
 
 										<!--Hi. I'm Sonia. I'm a public health professional dedicated to a career in global health. I've served with the Peace Corps in Kazakhstan, served refugees in the United States, and have worked in public health research. I have a BA from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a> , and a Master of Public Health degree from <a href="http://brownschool.wustl.edu/Pages/Home.aspx">Washington University in St. Louis</a>. I believe that the world can be better, and that we can make it better. You will find a breakdown of my experiences below.</p>-->
