--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<!--<div class="logo"><a href="#" class="image"><img src="images/biopic.jpg" alt="" width="30%" height="30%"/></a></div>-->
 							<div class="inner">
 								<div class="content">
-										<h2 class="major">Sonia Rego</h2><p>Hi. I'm Sonia. My interests are in the built environment, community health, and local food systems. I have a strong background in global health. I've served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and have worked in public health research. 
+										<h2 class="major">Sonia Rego</h2><p>Hi. I'm Sonia. I've served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and have worked in public health research. My interests are in the built environment, community health, and local food systems. 
 										<!--I have a ba from the <a href="http://www.utdallas.edu/">university of texas at dallas</a>, and a master of public health degree from <a href="http://brownschool.wustl.edu/Pages/Home.aspx">washington university in st. Louis</a>.--> 
 										<!--I believe that the world can be better, and that we can make it better. You will find a breakdown of my experiences below.-->
 										</p>
