--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sonia Rego</h1>
-								<p><!--[-->Public Health Professional. Organic Grower. Dog Walker.
+								<p><!--[-->Public Health Researcher. Organic Grower. Dog Walker.
 								<!--[--><!--for free under the <a href="https://html5up.net/license">Creative Commons</a> license.--><!--]--></p>
 							</div>
 						</div>
@@ -48,8 +48,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p> <a href="#work"></a></p>
+								<p></p>
 							</article>
 
 						<!-- Work -->
@@ -64,14 +64,18 @@
 									<h3> Bachelor of Arts in Psychology, 2010</h3>
 										<p> University of Texas at Dallas</p>
 											<h2 align="center"> Experience </h2>
-								<h3>Communications &amp; Young Person's Coordinator (2017-Present)</h3>
-								<h4>Healthwatch City of London</h4>
-								<p>I currently work as a coordinator for Healthwatch, an organisation dedicated towards a society in which people’s health and social care needs are heard, understood and met. I 
-									produce statistical information and reports in relation to the <a href="http://www.city-health.org.uk/">CityHealth</a> directory, as well as data analyses on community engagement. I manage Healthwatch City of London social media, and collect, analyse, and summarise consultations and reports-  including feedback from the public. I also conduct workshops for City of London youth with local partners.</p>
+											<h3>Research Assistant (2018-Present)</h3>
+								<h4>London School of Hygiene and Tropical Medicine</h4>
+								<p>I currently conduct qualitative research in health systems and antimicrobial resistance. I work with local partners and conduct field research on a new project- 'Combating drug resistance through better governance of unregulated antimicrobial sellers in Cambodia'</p>
 
-								<h3>Assistant Grower (2017-Present)</h3>
+								<h3>Communications &amp; Young Person's Coordinator (2017-2018)</h3>
+								<h4>Healthwatch City of London</h4>
+								<p>I coordinated communications and youth outreach for Healthwatch, an organisation dedicated towards a society in which people’s health and social care needs are heard, understood and met. I 
+									produced statistical information and reports in relation to the <a href="http://www.city-health.org.uk/">CityHealth</a> directory, as well as data analyses on community engagement. I managed Healthwatch City of London social media, and collect, analyse, and summarise consultations and reports-  including feedback from the public. I</p>
+
+								<h3>Assistant Grower (2017-2017)</h3>
 								<h4>Living Under One Sun</h4>
-								<p>I am currently an organic growing trainee, cultivating a growing site in Tottenham Hale with a community-based organisation growing vegetables, fruit, and flowers for local sale. It is awesome.</p>
+								<p>I worked as an organic growing trainee for a full growing season, cultivating a growing site in Tottenham Hale with a community-based organisation, growing vegetables, fruit, and flowers for local sale. It was awesome.</p>
 
 								<h3>Health Program Coordinator (2016)</h3>
 								<h4>GHANA HEALTH AND EDUCATION INITIATIVE</h4>
@@ -94,8 +98,10 @@
 								<p>Planned and team-taught English classes with local counterpart for grades 5-11, and a weekly English course for adults, in a community of 700 people. I also independently organized a Women's Leadership Camp, completed cross-cultural competency training, and project design training. </p>
 
 								<h2 align="center"> Volunteering</h2>
-								<h3>Queen's Wood Caf&eacute; Garden (2017-Present)</h3>
-								<p>I currently volunteer at an organic woodland community garden in North London, growing fruits and vegetables.</p>
+								<h3>The Cinnamon Trust (2017-Present)</h3>
+								<p>I am a volunteer walker for The Cinnamon Trust, the only specialist national charity which seeks to relieve the anxieties, problems, and sometimes injustices, faced by elderly and terminally ill people and their pets.</p>
+								<h3>Queen's Wood Caf&eacute; Garden (2017-2018)</h3>
+								<p>I volunteered at an organic woodland community garden in North London, growing fruits and vegetables.</p>
 								<h3>OrganicLea (2017)</h3>
 								<p>I volunteered at OrganicLea, a brilliant 12 acre workers' cooperative growing organic local produce in the Lea Valley. During this time, I completed my Level 1 Award in Work Based Horticulture. </p>
 								<h3>EarthDance Farms (2013-2015)</h3>
@@ -110,8 +116,8 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/biopic.jpg" alt="" /></span>
-								<p>I have served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in public health research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), French (beginner), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a sometimes-runner, a terrible and enthusiastic dancer, a joyful gardener, and I'm married to the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a><br><br>(The photo above was taken at Sustainable Organic Integrated Livelihoods (SOIL) in Haiti, and all other photos on this site were taken in Kazakhstan)</p>
+								<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
+								<p>I am currently a research assistant at the London School of Hygiene and Tropical Medicine. I have also served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), French (beginner), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a terrible and enthusiastic dancer, a joyful gardener, and love my life with the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a> and our superdog, Nora Ruth.</p>
 							</article>
 
 						<!-- Contact -->
