--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 											<h2 align="center"> Experience </h2>
 											<h3>Research Assistant (2018-Present)</h3>
 								<h4>London School of Hygiene and Tropical Medicine</h4>
-								<p>I currently conduct qualitative research in health systems and antimicrobial resistance. I work with local partners and conduct field research on a new project- 'Combating drug resistance through better governance of unregulated antimicrobial sellers in Cambodia'</p>
+								<p>I currently conduct qualitative research in health systems and antimicrobial resistance in Cambodia.</p>
 
 								<h3>Communications &amp; Young Person's Coordinator (2017-2018)</h3>
 								<h4>Healthwatch City of London</h4>
@@ -116,8 +116,8 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/aboutmepic.jpg" alt="" /></span>
-								<p>I am currently a research assistant at the London School of Hygiene and Tropical Medicine. I have also served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), French (beginner), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a terrible and enthusiastic dancer, a joyful gardener, and love my life with the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a> and our superdog, Nora Ruth.</p>
+								<span class="image main"><img src="images/sonia.jpg" alt="" /></span>
+								<p>I am currently a research assistant at the London School of Hygiene and Tropical Medicine. I have also served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), French (beginner), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a gardener, a dog walker, and live in London with the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a> and our superdog, Nora Ruth.</p>
 							</article>
 
 						<!-- Contact -->
