--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/sonia.jpg" alt="" /></span>
+								<span class="image main"><img src="images/sonia.JPG" alt="" /></span>
 								<p>I am currently a research assistant at the London School of Hygiene and Tropical Medicine. I have also served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), French (beginner), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a gardener, a dog walker, and live in London with the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a> and our superdog, Nora Ruth.</p>
 							</article>
 
