adding new job description

--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
 									<h3> Bachelor of Arts in Psychology, 2010</h3>
 										<p> University of Texas at Dallas</p>
 											<h2 align="center"> Experience </h2>
-											<h3>Research Assistant (2018-Present)</h3>
+
+											<h3>Research Assistant (2019-Present)</h3>
 								<h4>London School of Hygiene and Tropical Medicine</h4>
-								<p>I currently conduct qualitative research in health systems and antimicrobial resistance in Cambodia.</p>
+								<p>I currently work on a qualitative project in West Bengal. </p>
+											
+											<h3>Research Assistant (2018-2019)</h3>
+								<h4>London School of Hygiene and Tropical Medicine</h4>
+								<p>I managed oversight of fieldwork on a research project in Cambodia, and conduct qualitative analysis of interviews, and quantitative analysis of survey data. I contributed to scientific papers, co-organised dissemination with research partners, and delivered training on qualitative research methods to research partners. I also coordinated the LSHTM Private Sector Interest Group, bringing together a diverse group of researchers to share their work.</p>
 
 								<h3>Communications &amp; Young Person's Coordinator (2017-2018)</h3>
 								<h4>Healthwatch City of London</h4>
@@ -83,15 +88,15 @@
 
 								<h3>Refugee Coordinator (2014-2015)</h3>
 								<h4>International Institute of Saint Louis</h4>
-								<p>I worked at Missouri's refugee resettlement organization assisting refugee clients from The Democratic Republic of the Congo, Myanmar, Somalia, Afghanistan, Iraq, and Bhutan with health insurance and establishing primary care providers.  I also coordinated with multiple non-profits to provide immunizations for refugee adults and children, and created health literacy materials for public distribution throughout the state of Missouri.</p>
+								<p>I worked at Missouri's largest refugee resettlement organization, assisting refugee clients with health insurance and establishing primary care providers.  I also coordinated with multiple non-profits to provide immunizations for adults and children, and created health literacy materials for public distribution throughout the state of Missouri.</p>
 
 								<h3>Research Assistant (2013-2014)</h3>
 								<h4>George Warren Brown School of Social Work</h4>
-								<p>I worked with <a href="http://brownschool.wustl.edu/Faculty/FullTime/Pages/GautamNYadama.aspx">Professor Gautam N. Yadama</a> on a randomized control trial of sustainable improved cookstoves in rural India, and the consequent health effects on women and children. I also helped design causal loop diagrams to understand how gender, health, income, education, biodiversity, agricultural practices, and energy sources affect the adoption of safe-burning cookstove technology.</p>
+								<p>I worked with <a href="https://www.bc.edu/bc-web/schools/ssw/faculty-research/faculty-directory/gautam-yadama.html"> Gautam N. Yadama</a> on a randomized control trial of sustainable improved cookstoves in rural India, and the consequent health effects on women and children. I also helped design causal loop diagrams to understand how gender, health, income, education, biodiversity, agricultural practices, and energy sources affect the adoption of safe-burning cookstove technology.</p>
 
 								<h3>Research Assistant (2013)</h3>
 								<h4>Washington University School of Medicine</h4>
-								<p>Assisted <a href="http://www.publichealthsciences.wustl.edu/Faculty/GoodmanMelody">Professor Melody S. Goodman</a> in a longitudinal public health research course for community members to develop community based participatory research skills. The project also involved surveying individuals at an outpatient health clinic and administering health literacy assessments, as part of a larger project examining racial health disparities in the city of St. Louis.</p>
+								<p>Assisted <a href="http://www.publichealthsciences.wustl.edu/Faculty/GoodmanMelody"> Melody S. Goodman</a> in a longitudinal public health research course for community members to develop community based participatory research skills. The project also involved surveying individuals at an outpatient health clinic and administering health literacy assessments, as part of a larger project examining racial health disparities in the city of St. Louis.</p>
 
 								<h3>Peace Corps Volunteer, Education Program (2010-2011)</h3>
 								<h4>United States Peace Corps, Kazakhstan</h4>
@@ -117,7 +122,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/sonia.JPG" alt="" /></span>
-								<p>I am currently a research assistant at the London School of Hygiene and Tropical Medicine. I have also served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), French (beginner), Russian (beginner), and Spanish (beginner). <br/> <br/> I am a gardener, a dog walker, and live in London with the amazing <a href="http://mkusner.github.io/">Matthew J. Kusner</a> and our superdog, Nora Ruth.</p>
+								<p>I am currently a research assistant at the London School of Hygiene and Tropical Medicine working on projects in Cambodia, India, and Pakistan. Prior to this, I served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems. <br><br> I speak Kazakh (advanced), and Spanish (beginner). <br/> <br/> I am a gardener, a dog walker, and live in the UK with <a href="http://mkusner.github.io/">Matt Kusner</a> and our superdog, Nora Ruth.</p>
 							</article>
 
 						<!-- Contact -->
