--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 					<div class="hero-info"><!--section-title">-->
 						<h2>Contact</h2>
 						<ul>
-							<li><span>E-mail</span>sonia1rego[at]yahoo.com</li>
+							<li>sonia1rego[at]yahoo.com</li>
 						</ul>
 					</div>
 					<!--<form class="contact-form">
