--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<div class="hero-info">
 								<h2>About Me</h2>
 								<!--<ul>-->
-									I am currently a health systems research assistant at the London School of Hygiene and Tropical Medicine, working on projects in Cambodia, India, and Pakistan. Prior to this, I served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems.
+									I am currently a Health Systems Research Fellow at the London School of Hygiene and Tropical Medicine, working on projects in Cambodia, India, and Pakistan. Prior to this, I served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems.
 
 									I speak Kazakh (advanced), and Spanish (beginner).
 
@@ -127,7 +127,7 @@
 						<li>
 							<h2>2018-Present</h2>
 							<h3>London School of Hygiene and Tropical Medicine</h3>
-							<h4>Research Assistant</h4>
+							<h4>Research Fellow</h4>
 							<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>-->
 						</li>
 						<li>
