updated picture and description

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 							<div class="hero-info">
 								<h2>About Me</h2>
 								<!--<ul>-->
-									I am currently a Health Systems Research Fellow at the London School of Hygiene and Tropical Medicine, working on projects in Cambodia, India, and Pakistan. Prior to this, I served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems.
+									I am currently a Research Fellow at the London School of Hygiene and Tropical Medicine. My work focuses on antimicrobial resistance (AMR), specifically on antibiotic use in the private informal sector. I currently work on the Antimicrobial Stewardship in Agricultural Communities project, and have worked on projects in Cambodia, India, and Pakistan. Prior to this, I served with the Peace Corps in Kazakhstan, worked with a community-based health organization in Ghana, served refugees in the United States, and worked in racial health disparities research. My interests are in community health, sustainability, and local food systems.
 
 									I speak Kazakh (advanced), and Spanish (beginner).
 
-									I am a holistic gardener and a dog walker, and live in the UK with Matt Kusner and our superdog, Nora Ruth.
+									I am a holistic gardener and a dog walker, and live in the UK with <a href="http://mkusner.github.io/"  target="_blank">Matt Kusner</a> and our rescued dogs, Nora Ruth and Karl T.
 
 									<!--<li><span>Date of Birth</span>Aug 25, 1988</li>-->
 									<!--<li><span>Address</span>Rosia Road 55, Gibraltar, UK</li>-->
@@ -84,7 +84,7 @@
 						</div>
 						<div class="col-lg-6">
 							<figure class="hero-image">
-								<img src="images/sonia.JPG" alt="5">
+								<img src="images/sonia_nora_karl.jpg" alt="5">
 							</figure>
 						</div>
 					</div>
