--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Sonia Rego</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,21 +20,20 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-tree solid"></span> 
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Sonia Rego</h1>
+								<p> walking guide, writer, guardian to rescue dogs</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">About Me</a></li>
+								<li><a href="#work">Guiding</a></li>
+								<li><a href="#about">Writing</a></li>
+								<li><a href="#contact">Other</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -45,56 +44,94 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I am an American-Canadian living in Galloway, Scotland with <a href= "https://mkusner.github.io/"> Matt Kusner </a> and our two senior rescue dogs, <a href=" https://www.loveunderdogs.org/">Nora Ruth and Karl T </a>. I was a public health scientist, and am now a writer and outdoor guide. </p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Guiding</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>I learned to love the outdoors later in life- I did not grow up in a place or culture that gave me opportunities to learn about hiking, camping, or the joy of sitting under an ancient tree. </p> 
+
+								<p> Because of this, I am interested in working with folks who want to be in the outdoors, but feel worried about their skills, or worry they might not belong. I welcome ANYONE who wants to walk- I am LGBT+ friendly, and welcome those from diverse backgrounds. </p>
+
+								<p> I am a <a href="https://www.gsabiosphere.org.uk/">Galloway and Southern Ayrshire UNESCO Biosphere</a> trained guide, am a <a href="https://lnt.org/why/7-principles/"> Leave No Trace </a> practitioner, and have my outdoor first aid qualification. </p> 
+
+
+								<p> I specialise in chill walking, and offer two walks in the Galloway Forest Park. Learn more at Galloway Slow Walks.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">Writing</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p><b><u><center>Essays</center></u></b></p>
+
+<p><a href="https://wheretheleavesfall.com/explore/article-index/without-vultures/"><b>Without Vultures</b> </a>
+/ Where the Leaves Fall, Issue # 9. 
+ </p>
+
+
+<p><a href="https://wheretheleavesfall.com/explore/article-index/with-my-hands-in-the-soil/"><b>With My Hands in the Soil</b> </a>
+/ Where the Leaves Fall, Issue # 4. 
+ </p>
+
+
+<p><a href="https://wheretheleavesfall.com/explore/pictures/saving-seed/"><b>Saving Seed</b> </a>
+/ Where the Leaves Fall, Issue # 10. 
+ </p>
+
+<p><b><u><center>Other</center></u></b></p>
+
+<p><a href="https://dgtrails.org/southern-upland-way-the-preamble/">Southern Upland Way: The Preamble </a> </p>
+
+
+
+
+<p><b><u><center> Academic Publications </center></u></b></p>
+
+
+
+<p>Gautham, M, Miller, R, <b>Rego, S</b>, et al. <a href="https://doi.org/10.3390/antibiotics11040523">Availability, Prices and Affordability of Antibiotics Stocked by Informal Providers in Rural India: A Cross-Sectional Survey.</a> Antibiotics. (2022). </p>
+
+
+<p>Aftab, W, Khan, M, <b>Rego, S</b>, et al. <a href="https://doi.org/10.1186/s12960-021-00629-5">Variations in regulations to control standards for training and licensing of physicians: a multi-country comparison.</a>  Hum Resour Health (2021). </p>
+
+
+<p>Khan MS*, <b>Rego S*</b>, Rajal JB, Bond V, Fatima RK, Isani AK, et al. <a href=" https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0244936">Mitigating the impact of COVID-19 on tuberculosis and HIV services: A cross-sectional survey of 669 health professionals in 64 low and middle-income countries. </a> PLoS ONE (2021) </p>
+
+<p>Khan MS; Bory S, <b>Rego S</b>, Suy, S, Durrance-Bagale A, Sultana Z, Chhorn S, Phou S, Prien C, Heng S, Hanefeld J, Hasan R , Saphonn V. <a href=" https://doi.org/10.1186/s12960-020-0452-7">Is enhancing the professionalism of healthcare providers critical to tackling antimicrobial resistance in low- and middle-income countries? </a>  Human Resources for Health (2020) </p>
+
+<p><b>Rego S</b>, Suy S, Bory S, Chhorn, S, Phou S, Prien C, Heng S, Wu S, Legido-Quigley H, Hanefeld J, Saphonn V, Khan, MS. <a href="https://gh.bmj.com/content/4/5/e001787">Invisible medicine sellers and their use of antibiotics: a qualitative study in Cambodia.</a> BMJ Global Health. (2019).</p>  
+
+<p>Khan MS, <b>Rego S</b>, Wu S, Coker R, Heymann D, Legido-Quigley H. Health systems barriers to controlling infectious diseases in low and middle income Asian countries in Resilient and people-centred health systems: Progress, challenges and future directions in Asia (Eds Legido-Quigley H, Asgari-Jirhandeh N) (2018).</p>
+
+</p>
+
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								<h2 class="major">Qualifications/Other</h2>
+								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<p><b><u><center>Qualifications</center></u></b></p>
+								<p> Outdoor First Aid (2023)
+								<br>Level 3 Certificate in Environmental Conservation and Countryside Management (2022)
+<br>Level 2 Certificate in Understanding Climate Change (2022)
+<br>Level 1 Award in Safeguarding in a Learning Environment (2022)
+<br>Level 1 Award in Land-based Studies (2022)
+<br>Level 1 Award in Work Based Horticulture (2017)
+<br>Master of Public Health (2014)
+<br>B.A. Psychology (2010)</p>
+	
+<p><b><u><center>Other</center></u></b></p>
+
+								<p> I speak Kazakh (intermediate high), Uzbek (intermediate low) and can bumble around in present tense French and Spanish </p>
+<p>I was the seed saving project manager for 3 years at OmVed Gardens, running workshops on compost, gardening, and seed saving for a more resilient future. My team won a silver medal at the Chelsea Flower Show in 2022 for our exhibition, <a href="https://www.savingseedbyomved.com/">Saving Seed</a> 
+
+</p>
 							</article>
 
 						<!-- Elements -->
@@ -343,7 +380,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Sonia Rego, 2023 </p>
 					</footer>
 
 			</div>
