--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">Writing</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic03.JPG" alt="" /></span>
 								<p><b><u><center>Essays</center></u></b></p>
 
 <p><a href="https://wheretheleavesfall.com/explore/article-index/without-vultures/"><b>Without Vultures</b> </a>
